quacker-api-gateway/k8s/production/quacker-api-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quacker-api-gateway
  labels:
    app: quacker-api-gateway
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quacker-api-gateway
      version: v1
  template:
    metadata:
      labels:
        app: quacker-api-gateway
        version: v1
    spec:
      containers:
        - name: quacker-api-gateway
          image: quackernl/quacker-api-gateway:latest
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 5021
          resources:
            requests:
              memory: '100Mi'
              cpu: '100m'
            limits:
              memory: '200Mi'
              cpu: '500m'
