quacker-api-gateway/k8s/production/quacker-api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quacker-api-gateway
  labels:
    app: quacker-api-gateway
    service: quacker-api-gateway
spec:
  type: ClusterIP
  ports:
    - name: 'http-5021'
      port: 5021
      targetPort: 5021
  selector:
    app: quacker-api-gateway
